--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,43 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+
+knp_menu:
+    # use "twig: false" to disable the Twig extension and the TwigRenderer
+    twig:
+        template: KnpMenuBundle::menu.html.twig
+    #  if true, enables the helper for PHP templates
+    templating: false
+    # the renderer to use, list is also available by default
+    default_renderer: twig
+
+easy_admin:
+    site_name: 'Sims Tracker Admin'
+    design:
+        brand_color: '#1ABC9C'
+        form_theme: 'vertical'
+    list:
+        title: '%%entity_label%%'
+        actions:
+            - { name: 'show', icon: 'search', label: '' }
+            - { name: 'edit', icon: 'pencil', label: '' }
+            - { name: 'delete', icon: 'times', label: '' }
+    show:
+        title: '%%entity_label%% (#%%entity_id%%)'
+    edit:
+        title: 'Edit %%entity_label%%'
+    new:
+        title: 'New %%entity_label%%'
+    formats:
+        date:     'd/m/Y'
+        time:     'H:i'
+        datetime: 'd/m/Y H:i:s'
+    entities:
+        User:
+            class: AppBundle\Entity\AppUser
+        Bug:
+            class: AppBundle\Entity\Bugcollection
+            list:
+                fields:
+                    - { property: 'Bugicon', type: 'image', base_path: 'images/icons/' }
+                    - Bugname
